Fri Aug 16 08:25:25 CEST 2013
acpica-20130214-i486-1_microlinux.txz: Added.
virtualbox-4.1.24-i486-1_microlinux.txz: Added.
virtualbox-kernel-4.1.24_3.2.45_smp-i486-1_microlinux.txz: Added.
+--------------------------+
Thu Aug 15 14:44:19 CEST 2013
libkcddb-4.10.5-i486-1_microlinux.txz: Added.
libmusicbrainz-2.1.5-i486-1_microlinux.txz: Added.
k3b-2.0.2-i486-1_microlinux.txz: Added.
mjpegtools-2.0.0-i486-1_microlinux.txz: Added.
libquicktime-1.2.4-i486-1_microlinux.txz: Added.
libmpeg2-0.5.1-i486-1_microlinux.txz: Added.
transcode-1.1.7-i486-1_microlinux.txz: Added.
vcdimager-0.7.23-i486-1_microlinux.txz: Added.
kde-wallpapers-4.10.5-i486-1_microlinux.txz: Added.
kdeartwork-4.10.5-i486-1_microlinux.txz: Added.
asunder-2.2-i486-1_microlinux.txz: Added.
kamera-4.10.5-i486-1_microlinux.txz: Added.
kcalc-4.10.5-i486-1_microlinux.txz: Added.
libevent-2.0.21-i486-1_microlinux.txz: Added.
transmission-2.77-i486-1_microlinux.txz: Added.
oxygen-gtk3-1.1.4-i486-1_microlinux.txz: Added.
wxGTK-2.8.12-i486-2_microlinux.txz: Added.
soundtouch-1.6.0-i486-1_microlinux.txz: Added.
audacity-2.0.3-i486-1_microlinux.txz: Added.
pyxdg-0.18-i486-1_microlinux.txz: Added.
goocanvas-0.15-i486-1_microlinux.txz: Added.
pygoocanvas-0.14.1-i486-2_microlinux.txz: Added.
mlt-0.8.2-i486-1_microlinux.txz: Added.
openshot-1.4.3-i486-1_microlinux.txz: Added.
+--------------------------+
Wed Aug 14 18:51:46 CEST 2013
oxygen-gtk2-1.3.4-i486-1_microlinux.txz: Added.
mozilla-firefox-l10n-17.0.8-i486-1_microlinux.txz: Added.
mozilla-thunderbird-l10n-17.0.8-i486-1_microlinux.txz: Added.
openoffice-4.0.0_en_US-i586-2_microlinux.txz: Added.
openoffice-langpack-4.0.0_fr-i486-2_microlinux.txz: Added.
eurostile-fonts-1.0-noarch-1_microlinux.txz: Added.
google-droid-fonts-20100409-noarch-1_microlinux.txz: Added.
webcore-fonts-3.0-noarch-3_microlinux.txz: Added.
kde-base-artwork-4.10.5-i486-1_microlinux.txz: Added.
okular-4.10.5-i486-1_microlinux.txz: Added.
libkexiv2-4.10.5-i486-1_microlinux.txz: Added.