@@ -1,0 +1,19 @@
+# HOW TO EDIT THIS FILE:
+# The "handy ruler" below makes it easier to edit a package description.  Line
+# up the first '|' above the ':' following the base package name, and the '|'
+# on the right side marks the last column you can put a character in.  You must
+# make exactly 11 lines for the formatting to be correct.  It's also
+# customary to leave one space after the ':'.
+
+                   |-----handy-ruler------------------------------------------------------|
+flash-player-plugin: flash-player-plugin (flash plugin for web browsers)
+flash-player-plugin:
+flash-player-plugin: Provides Adobe Flash plugin for browsers that recognize
+flash-player-plugin: /usr/lib(64)/mozilla/plugins as a valid plugin directory
+flash-player-plugin:
+flash-player-plugin: Plugin is subject to Adobe terms of use:
+flash-player-plugin:  https://www.adobe.com/misc/terms.html
+flash-player-plugin:
+flash-player-plugin:
+flash-player-plugin:
+flash-player-plugin: Package created by Niki Kovacs <info@microlinux.fr>
