@@ -2,6 +2,7 @@ Fri Aug 16 08:25:25 CEST 2013
 acpica-20130214-i486-1_microlinux.txz: Added.
 virtualbox-4.1.24-i486-1_microlinux.txz: Added.
 virtualbox-kernel-4.1.24_3.2.45_smp-i486-1_microlinux.txz: Added.
+flash-player-plugin-11.2.202.297-i386-1_microlinux.txz: Added.
 +--------------------------+
 Thu Aug 15 14:44:19 CEST 2013
 libkcddb-4.10.5-i486-1_microlinux.txz: Added.
